dsl-autocomplete-extension/src/grammar/ProjetoDSL.g4
grammar ProjetoDSL;

@header {
package br.com.gerador.grammar;
}

file: serviceDecl+;

serviceDecl: 'service' ID '{' entityDecl+ '}';

entityDecl: 'entity' ID '{' fieldDecl+ '}';

fieldDecl: ID ':' type option? validation?;

type:
	'string'
	| 'uuid'
	| 'integer'
	| 'long'
	| 'double'
	| 'boolean'
	| 'date'
	| 'datetime'
	| 'decimal';

option: '?' ;

validation:
	'min(' INT ',' STRING ')'
	| 'max(' INT ')'
	| 'notNull'
	| 'notBlank';

ID: [a-zA-Z_][a-zA-Z_0-9]*;
INT: [0-9]+;
STRING: '"' (~["\\] | '\\' .)* '"';

WS: [ \t\r\n]+ -> skip;
COMMENT: '//' ~[\r\n]* -> skip;
